--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">Fact This Shoot</string>
     <string name="title_activity_settings">Settings</string>
     <string name="signin_other_error">There was an issue with sign in, please try again later.</string>
@@ -72,4 +72,5 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="title_activity_insert_question">InsertQuestion</string>
+    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
 </resources>
